swtch from nginx http3 build target to nginx stable with openssl 3

--- a/.env
+++ b/.env
@@ -8,21 +8,21 @@ BUSYBOX_VERSION=1.34.1
 # https://hub.docker.com/_/alpine
 ALPINE_VERSION=3.16.1
 
-# https://hg.nginx.org/nginx-quic/file/tip/src/core/nginx.h
+# https://hg.nginx.org/nginx/file/tip/src/core/nginx.h
 NGINX_VERSION=1.23.1
 
 # Supported versions: https://nginx.org/en/docs/configure.html
 # Downloaded via: https://zlib.net/
 ZLIB_VERSION=1.2.12
 
-# https://hg.nginx.org/nginx-quic/shortlog/quic
-NGINX_COMMIT=3550b00d9dc8
+# https://github.com/openssl/openssl/tags
+OPENSSL_VERSION=openssl-3.0.5
+
+# https://hg.nginx.org/nginx/shortlog/
+NGINX_COMMIT=a63d0a70afea
 
 # https://github.com/google/ngx_brotli
 NGX_BROTLI_COMMIT=6e975bcb015f62e1f303054897783355e2a877dc
-
-# https://github.com/google/boringssl
-BORINGSSL_COMMIT=4da5a947368c98634a45741e60a0b9e9fa98c5df
 
 # https://github.com/openresty/headers-more-nginx-module#installation
 HEADERS_MORE_VERSION=0.34
