add real_ip_ directives to default nginx.conf

--- a/src/etc/nginx/nginx.conf
+++ b/src/etc/nginx/nginx.conf
@@ -50,11 +50,17 @@ http {
   proxy_set_header X-Forwarded-Proto $scheme;
   proxy_set_header X-Forwarded-Server $host;
   proxy_set_header X-Real-IP $remote_addr;
+  real_ip_header X-Forwarded-For;
+  real_ip_recursive on;
   resolver $DNS_RESOLVER;
   resolver_timeout 3s;
   root '/var/www/html';
   sendfile on;
   server_tokens off;
+  set_real_ip_from 10.0.0.0/8;
+  set_real_ip_from 172.16.0.0/12;
+  set_real_ip_from 192.168.0.0/16;
+  set_real_ip_from fd00::/7;
   ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!3DES:!MD5:!PSK';
   ssl_early_data off; # Requests sent within early data are subject to replay attacks. https://datatracker.ietf.org/doc/html/rfc8470
   ssl_ocsp_cache shared:OCSP:10m; # requires nginx 1.19+
