--- a/src/etc/nginx/nginx.conf
+++ b/src/etc/nginx/nginx.conf
@@ -18,6 +18,7 @@ events {
 
 http {
   log_format main '[$time_iso8601] status:$status request_time:$request_time upstream_response_time:$upstream_response_time bytes_sent:$body_bytes_sent domain:$host port:$server_port tcp_info:"$tcpinfo_rtt,$tcpinfo_rttvar,$tcpinfo_snd_cwnd,$tcpinfo_rcv_space" client_ip:$remote_addr request:"$request" referer:"$http_referer" user_agent:"$http_user_agent"';
+
   access_log '/var/log/nginx/access.log' main buffer=64K flush=500ms;
   brotli on;
   brotli_static on;
@@ -37,7 +38,7 @@ http {
   keepalive_timeout 300;
   log_not_found on;
   log_subrequest off;
-  more_clear_headers 'Server';
+  more_set_headers 'Server: This is not the droid you are looking for';
   more_clear_headers 'X-Powered-By';
   proxy_buffering on;
   proxy_headers_hash_max_size 2048;
