update localhost config to serve a plaintext version to curl and wget

--- a/config/sites/localhost.conf
+++ b/config/sites/localhost.conf
@@ -29,7 +29,12 @@ server {
     default_type 'text/html';
     gzip off;
     brotli off;
-    return 200 '<h1>It works!</h1><h1>Using: $server_protocol | $ssl_protocol | $ssl_cipher</h1>';
+
+    if ($http_user_agent ~* '.*(curl|wget).*') {
+      return 200 'It works!\nUsing: $server_protocol | $ssl_protocol | $ssl_cipher\n';
+    }
+
+    return 200 '<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><title>It works!</title></head><body><h1>It works!</h1><h1>Using: $server_protocol | $ssl_protocol | $ssl_cipher</h1></body></html>\n';
   }
 
   location /test.html {
