WIP: add njs hello world

--- a/src/etc/nginx/nginx.conf
+++ b/src/etc/nginx/nginx.conf
@@ -74,6 +74,8 @@ http {
   ssl_stapling_verify on;
   tcp_nodelay off;
 
+  js_path '/etc/nginx/njs/';
+  js_import http.js;
   include 'sites/*.conf';
 }
 
