--- a/config/sites/localhost.conf
+++ b/config/sites/localhost.conf
@@ -37,6 +37,10 @@ server {
     return 200 '<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><title>It works!</title></head><body><h1>It works!</h1><h1>Using: $server_protocol | $ssl_protocol | $ssl_cipher</h1></body></html>\n';
   }
 
+  location /njs {
+    js_content http.hello;
+  }
+
   location /test.html {
     gzip_static on;
     brotli_static on;
