--- a/example.env
+++ b/example.env
@@ -1,6 +1,10 @@
 # vim: sw=2 et
 
+# Runtime ENV
 DNS_RESOLVER="1.1.1.1"
+
+
+# Build ENV
 
 # https://hub.docker.com/_/busybox
 BUSYBOX_VERSION=1.34.1
