update small things

--- a/config/sites/localhost.conf
+++ b/config/sites/localhost.conf
@@ -7,7 +7,7 @@ server {
   location / {
     default_type 'text/plain';
     expires 0;
-    return 400 'Retry on https port';
+    return 400 'Retry on https port\n';
   }
 }
 
