--- a/src/etc/nginx/nginx.conf
+++ b/src/etc/nginx/nginx.conf
@@ -8,7 +8,7 @@ pcre_jit on;
 pid '/var/run/nginx/nginx.pid';
 worker_cpu_affinity auto;
 worker_priority 10;
-worker_processes auto;
+worker_processes $NGINX_WORKER_PROCESSES;
 
 events {
   worker_connections 1024;
