Switch openssl build from git clone to src tar download & extract

--- a/example.env
+++ b/example.env
@@ -22,7 +22,7 @@ NGINX_VERSION=1.23.1
 ZLIB_VERSION=1.2.12
 
 # https://github.com/openssl/openssl/tags
-OPENSSL_VERSION=openssl-3.0.5
+OPENSSL_VERSION=3.0.5
 
 # https://hg.nginx.org/nginx/shortlog/
 NGINX_COMMIT=a63d0a70afea
