--- a/example.env
+++ b/example.env
@@ -24,6 +24,9 @@ ZLIB_VERSION=1.2.12
 # https://github.com/openssl/openssl/tags
 OPENSSL_VERSION=3.0.5
 
+# https://github.com/PCRE2Project/pcre2/releases
+PCRE_VERSION=10.40
+
 # https://hg.nginx.org/nginx/shortlog/
 NGINX_COMMIT=a63d0a70afea
 
