--- a/example.env
+++ b/example.env
@@ -1,10 +1,12 @@
 # vim: sw=2 et
 
 # Runtime ENV
-DNS_RESOLVER="1.1.1.1"
+DNS_RESOLVER="1.1.1.1" # used for dns based upstream targets and OCSP stapling lookups
+NGINX_ENVSUBST_TEMPLATE_SUFFIX=".conf"
 NGINX_LOG_FORMAT_NAME="main"
+NGINX_SERVER_HEADER=""
 NGINX_WORKER_PROCESSES="2"
-TZ="Europe/Berlin"
+TZ="UTC"
 
 
 # Build ENV
