--- a/src/etc/nginx/nginx.conf
+++ b/src/etc/nginx/nginx.conf
@@ -155,8 +155,8 @@ http {
   keepalive_timeout 300;
   log_not_found on;
   log_subrequest off;
-  more_set_headers 'Server: This is not the droid you are looking for';
   more_clear_headers 'X-Powered-By';
+  more_set_headers 'Server: $NGINX_SERVER_HEADER';
   proxy_buffering on;
   proxy_headers_hash_max_size 2048;
   proxy_http_version 1.1;
