--- a/src/etc/nginx/nginx.conf
+++ b/src/etc/nginx/nginx.conf
@@ -190,8 +190,7 @@ http {
   ssl_stapling_verify on;
   tcp_nodelay off;
 
-  js_path '/etc/nginx/njs/';
-  js_import http.js;
+  include 'njs.conf';
   include 'sites/*.conf';
 }
 
