--- a/example.env
+++ b/example.env
@@ -11,6 +11,9 @@ TZ="UTC"
 
 # Build ENV
 
+#BUILD_CACHE="--no-cache"
+BUILD_CACHE=""
+
 # Reduce build jobs by 4 if there are more then 7 cores else set jobs to half of core count
 # This is useful if you dont want to congest the cpu of your building system
 BUILD_THROTTLE=n
