update to OpenSSL 3.0.6, add env template, build-all and push-image scripts

--- a/example.tmpl.env
+++ b/example.tmpl.env
@@ -1,35 +1,35 @@
 # vim: sw=2 et
 
 # Runtime ENV
-DNS_RESOLVER="1.1.1.1" # used for dns based upstream targets and OCSP stapling lookups
-NGINX_ENVSUBST_TEMPLATE_SUFFIX=".conf"
-NGINX_LOG_FORMAT_NAME="main"
-NGINX_SERVER_HEADER=""
-NGINX_WORKER_PROCESSES="2"
-TZ="UTC"
+DNS_RESOLVER=1.1.1.1
+NGINX_ENVSUBST_TEMPLATE_SUFFIX=.conf
+NGINX_LOG_FORMAT_NAME=main
+NGINX_SERVER_HEADER=
+NGINX_WORKER_PROCESSES=2
+TZ=UTC
 
 
 # Build ENV
 
-#BUILD_CACHE="--no-cache"
-BUILD_CACHE=""
+# BUILD_CACHE="--no-cache"
+BUILD_CACHE=
 
 # Reduce build jobs by 4 if there are more then 7 cores else set jobs to half of core count
 # This is useful if you dont want to congest the cpu of your building system
-BUILD_THROTTLE=n
+BUILD_THROTTLE=y
 
 # https://hub.docker.com/_/alpine
 ALPINE_VERSION=3.16.2
 
 # https://hg.nginx.org/nginx/tags
-NGINX_VERSION=1.23.1
-NGINX_COMMIT=a63d0a70afea
+NGINX_VERSION={{ NGINX_VERSION }}
+NGINX_COMMIT={{ NGINX_COMMIT }}
 
 # https://hg.nginx.org/njs/tags
 NJS_COMMIT=1592d46d9076
 
 # https://www.openssl.org/news/changelog.html
-OPENSSL_VERSION=3.0.5
+OPENSSL_VERSION=3.0.6
 
 # Supported versions: https://nginx.org/en/docs/configure.html
 # Downloaded via: https://zlib.net/
