update njs, readme and build scripts:
container image:
- nginx njs module update to 0.7.9
- add njs module version string to build config
- remove the following timezone data binary files:
  - `posixtz`
  - `zdump`
  - `zic`

readme:
- update Publish Checklist section; add more specific instructions

build scripts:
- add: set pipefail

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
         NGINX_VERSION: $NGINX_VERSION
         NGX_BROTLI_COMMIT: $NGX_BROTLI_COMMIT
         NJS_COMMIT: $NJS_COMMIT
+        NJS_VERSION: $NJS_VERSION
         OPENSSL_VERSION: $OPENSSL_VERSION
         PCRE_VERSION: $PCRE_VERSION
         ZLIB_VERSION: $ZLIB_VERSION
