--- a/example.tmpl.env
+++ b/example.tmpl.env
@@ -11,8 +11,8 @@ TZ=UTC
 
 # Build ENV
 
-# BUILD_CACHE="--no-cache"
 BUILD_CACHE=
+# BUILD_CACHE="--no-cache"
 
 # Reduce build jobs by 4 if there are more then 7 cores else set jobs to half of core count
 # This is useful if you dont want to congest the cpu of your building system
@@ -28,6 +28,7 @@ NGINX_COMMIT={{ NGINX_COMMIT }}
 
 # https://hg.nginx.org/njs/tags
 NJS_COMMIT=3308415d7de8
+NJS_VERSION=0.7.9
 
 # https://www.openssl.org/news/changelog.html
 OPENSSL_VERSION=3.0.7
