WIP: removed unneded build-from-source deps and other stuff:
- we are now only building nginx mainline versions (1.23.3 atm.)
- put image name into env variable
- dont build deps which can be linked from build-env os
  - openssl
  - pcre
  - zlib
- removed busybox; we are usign build-env os binaries instead
- no custom CFLAGS anymore; we are using noe the same as fedora
- update `envsubst`
- create auditable `envsubst` binary via `cargo-auditable`
- build nginx now additionally with the following modules:
  - http_image_filter_module
- stwich from `scanelf` to `ldd` for dynamic shared object detection of
  binaries
- run `strip` on shared objects as well, in case there is something to
  remove from any
- remove executable bit from all shared objects in `/lib64/`
- add `bash`
- remove default http response header `referrer-policy` from nginx config
- cleanup `/etc/{group,passwd,shadow}` files
  - remove some unused users and groups
  - switch `nginx` user and group id from `1000` to `101`

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,19 +8,13 @@ services:
       context: .
       args:
         BUILD_THROTTLE: $BUILD_THROTTLE
-        BUSYBOX_VERSION: $BUSYBOX_VERSION
-        CFLAGS_ADD: $CFLAGS_ADD
         HEADERS_MORE_VERSION: $HEADERS_MORE_VERSION
         NGINX_COMMIT: $NGINX_COMMIT
         NGINX_VERSION: $NGINX_VERSION
         NGX_BROTLI_COMMIT: $NGX_BROTLI_COMMIT
         NJS_COMMIT: $NJS_COMMIT
         NJS_VERSION: $NJS_VERSION
-        OPENSSL_VERSION: $OPENSSL_VERSION
-        PCRE_VERSION: $PCRE_VERSION
-        ZLIB_VERSION: $ZLIB_VERSION
-    image: compilenix/nginx:${NGINX_VERSION}
-    container_name: nginx
+    image: ${IMAGE_NAME}:${NGINX_VERSION}
     # command: ["/usr/bin/nginx", "-t"]
     environment:
       DNS_RESOLVER: ${DNS_RESOLVER:-1.1.1.1}
