--- a/example.env
+++ b/example.env
@@ -11,6 +11,8 @@ TZ=UTC
 
 # Build ENV
 
+IMAGE_NAME="compilenix/nginx"
+
 BUILD_CACHE=
 # BUILD_CACHE="--no-cache"
 
@@ -20,32 +22,16 @@ BUILD_THROTTLE=n
 
 # https://hg.nginx.org/nginx/tags
 # https://hub.docker.com/_/nginx
-NGINX_VERSION={{ NGINX_VERSION }}
-NGINX_COMMIT={{ NGINX_COMMIT }}
+NGINX_VERSION=1.23.3
+NGINX_COMMIT=ff3afd1ce6a6
 
 # https://hg.nginx.org/njs/tags
 NJS_COMMIT=3a1b46d51f04
 NJS_VERSION=0.7.10
-
-# https://www.openssl.org/news/changelog.html
-OPENSSL_VERSION=3.0.8
-
-# Supported versions: https://nginx.org/en/docs/configure.html
-# Downloaded via: https://zlib.net/
-ZLIB_VERSION=1.2.13
-
-# https://github.com/PCRE2Project/pcre2/releases
-PCRE_VERSION=10.42
 
 # https://github.com/openresty/headers-more-nginx-module/tags
 HEADERS_MORE_VERSION=0.34
 
 # https://github.com/google/ngx_brotli/commits/master
 NGX_BROTLI_COMMIT=6e975bcb015f62e1f303054897783355e2a877dc
-
-# https://hub.docker.com/_/busybox
-# use latest stable version
-BUSYBOX_VERSION=1.36.0
-
-CFLAGS_ADD="-O3 -pipe"
 
