Update nginx and migrate to dynamic linked build
- update nginx from 1.23.3 to 1.23.4
  - we are now only building nginx mainline versions
- update njs from 0.7.10 to 0.7.11
- update openssl from 3.0.7 to 3.0.8
- switch from static linked binary to dynamically linked
- add `add-user.sh` and `permissions.sh`
- put image name into env variable
- dont build deps which can be linked from build-env os
  - openssl
  - pcre
  - zlib
- removed busybox; we are using build-env os binaries instead
- no custom CFLAGS anymore; we are using now the same as fedora does
- run `strip` on shared objects as well, in case there is something to
  remove from any
- remove default http response header `referrer-policy` from nginx config
- cleanup `/etc/{group,passwd,shadow}` files
  - remove some unused users and groups
  - switch `nginx` user and group id from `1000` to `101`
- remove obsolete zlib patch
- add tools / binaries:
  - `chmod`
  - `chown`
  - `id`
- remove nginx modules:
  - `http_xslt`
  - `mail`
  - `mail_ssl`
  - `compat`
  - `http_random_index`
  - `http_slice`
  - `http_secure_link`
  - `http_dav`
- add default index.html file to `/var/www/html`
- change default value of `NGINX_WORKER_PROCESSES` from `2` to `auto`
- switch from `nginx` user to `root`, this can be overriden via `--user`
- change default exposed ports from `2080` & `2443` to `80` & `443`
- add `status.conf`, listening on localhost inside the container on port `81`, serving `stub_status` at `/`.
- update envsubst ob nginx configs on container start logic:
  - merge existing configs and those coming from a mapped volume on every container start.
    this allowes changed env vars between starts to be re-applied and updates to mapped
    nginx conig files to take effect.
- update file permissions on container start for merged configs in `/etc/nginx`
- update `nginx.conf`:
  - disable on-the-fly brotli compression of responses. Can be enabled via `brotli on;`
  - same with on-the-fly gzip compression. Can be e

--- a/config/sites/default.conf
+++ b/config/sites/default.conf
@@ -1,7 +1,7 @@
-# vim: sw=2 et
+# vim: sw=2 et filetype=nginx
 
 server {
-  listen 2080;
+  listen 80;
   server_name $NGINX_HOST;
 
   location / {
@@ -10,7 +10,7 @@ server {
 }
 
 server {
-  listen 2443 ssl http2;
+  listen 443 ssl http2;
   server_name $NGINX_HOST;
   root '/var/www/html';
 
