--- a/config/sites/localhost.conf
+++ b/config/sites/localhost.conf
@@ -1,53 +1,27 @@
-# vim: sw=2 et
+# vim: sw=2 et filetype=nginx
 
 server {
-  listen 2080;
+  listen 80;
   server_name localhost 127.0.0.1 [::1];
+  root '/var/www/html';
+  index index.html;
 
   location / {
-    default_type 'text/plain';
-    expires 0;
-    return 404 'Retry on https port\n';
+    allow all;
   }
 }
 
 server {
-  listen 2443 ssl http2;
+  listen 443 ssl http2;
   server_name localhost 127.0.0.1 [::1];
+  root '/var/www/html';
+  index index.html;
 
   ssl_certificate 'ssl/cert.pem';
   ssl_certificate_key 'ssl/privkey.pem';
 
-  gzip_vary off;
-  expires 0;
-
-  location = / {
-    default_type 'text/html';
-    gzip off;
-    brotli off;
-
-    if ($http_user_agent ~* '.*(curl|wget).*') {
-      return 200 'It works!\nUsing: $server_protocol | $ssl_protocol | $ssl_cipher\n';
-    }
-
-    return 200 '<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><title>It works!</title></head><body><h1>It works!</h1><h1>Using: $server_protocol | $ssl_protocol | $ssl_cipher</h1></body></html>\n';
-  }
-
-  location = /test.html {
-    gzip_static on;
-    brotli_static on;
-  }
-
-  location = /test_brotli.html {
-    gzip_static off;
-  }
-
-  location = /test_gzip.html {
-    brotli_static off;
-  }
-
-  location /health {
-    return 200 'healthy\n';
+  location / {
+    allow all;
   }
 }
 
