--- a/example.env
+++ b/example.env
@@ -5,8 +5,10 @@ DNS_RESOLVER=1.1.1.1
 NGINX_ENVSUBST_TEMPLATE_SUFFIX=.conf
 NGINX_LOG_FORMAT_NAME=main
 NGINX_SERVER_HEADER=
-NGINX_WORKER_PROCESSES=2
+NGINX_WORKER_PROCESSES=auto
 TZ=UTC
+USER_ID=101
+GROUP_ID=101
 
 
 # Build ENV
@@ -22,12 +24,12 @@ BUILD_THROTTLE=n
 
 # https://hg.nginx.org/nginx/tags
 # https://hub.docker.com/_/nginx
-NGINX_VERSION=1.23.3
-NGINX_COMMIT=ff3afd1ce6a6
+NGINX_VERSION=1.23.4
+NGINX_COMMIT=ac779115ed6e
 
 # https://hg.nginx.org/njs/tags
-NJS_COMMIT=3a1b46d51f04
-NJS_VERSION=0.7.10
+NJS_COMMIT=26dd3824b9f3
+NJS_VERSION=0.7.11
 
 # https://github.com/openresty/headers-more-nginx-module/tags
 HEADERS_MORE_VERSION=0.34
