--- a/src/etc/nginx/nginx.conf
+++ b/src/etc/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# vim: sw=2 et
+# vim: sw=2 et filetype=nginx
 
 include 'modules/*.conf';
 include 'nginx/*.conf';
@@ -9,10 +9,10 @@ pid '/var/run/nginx/nginx.pid';
 worker_cpu_affinity auto;
 worker_priority 10;
 worker_processes $NGINX_WORKER_PROCESSES;
+user nginx nginx;
 
 events {
   worker_connections 1024;
-
   include 'debug_connection.conf';
 }
 
@@ -137,7 +137,7 @@ http {
   '}';
 
   access_log '/var/log/nginx/access.log' $NGINX_LOG_FORMAT_NAME buffer=64K flush=500ms;
-  brotli on;
+  brotli off;
   brotli_static on;
   client_body_buffer_size 32k;
   client_body_timeout 10s;
@@ -147,9 +147,9 @@ http {
   default_type 'application/octet-stream';
   directio 4m;
   etag on;
-  gzip on;
+  gzip off;
   gzip_static on;
-  gzip_vary on;
+  gzip_vary off;
   if_modified_since exact;
   ignore_invalid_headers on;
   keepalive_timeout 300;
