--- a/njs/localhost.conf
+++ b/njs/localhost.conf
@@ -1,7 +1,7 @@
-# vim: sw=2 et
+# vim: sw=2 et filetype=nginx
 
 server {
-  listen 2080;
+  listen 80;
   server_name localhost 127.0.0.1 [::1];
 
   location / {
@@ -12,7 +12,7 @@ server {
 }
 
 server {
-  listen 2443 ssl http2;
+  listen 443 ssl http2;
   server_name localhost 127.0.0.1 [::1];
 
   ssl_certificate 'ssl/cert.pem';
@@ -31,10 +31,21 @@ server {
     }
 
     return 200 '<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><title>It works!</title></head><body><h1>It works!</h1><h1>Using: $server_protocol | $ssl_protocol | $ssl_cipher</h1></body></html>\n';
+    }
+
+  location = /njs/date {
+    default_type 'text/plain';
+    js_content http.date;
   }
 
-  location = /njs {
+  location = /njs/hello {
+    default_type 'text/plain';
     js_content http.hello;
+  }
+
+  location = /njs/version {
+    default_type 'text/plain';
+    js_content http.version;
   }
 
   location = /test.html {
@@ -50,7 +61,8 @@ server {
     brotli_static off;
   }
 
-  location /health {
+  location = /health {
+    default_type 'text/plain';
     return 200 'healthy\n';
   }
 }
