--- a/config/sites/default.conf
+++ b/config/sites/default.conf
@@ -10,7 +10,8 @@ server {
 }
 
 server {
-  listen 443 ssl http2;
+  listen 443 ssl;
+  http2 on;
   server_name $NGINX_HOST;
   root '/var/www/html';
 
