update nginx, njs, brotli, headers more & openssl
- build openssl from source again, because fedora ships an outdated version
- update nginx from 1.25.2 to 1.25.3
- update njs 0.8.1 to 0.8.2
- update headers-more-nginx-module from 0.34 to 0.35
- update ngx_brotli to [a71f9312c2deb28875acc7bacfdd5695a111aa53](https://github.com/google/ngx_brotli/compare/63ca02abdcf79c9e788d2eedcc388d2335902e52...a71f9312c2deb28875acc7bacfdd5695a111aa53)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
         NGX_BROTLI_COMMIT: $NGX_BROTLI_COMMIT
         NJS_COMMIT: $NJS_COMMIT
         NJS_VERSION: $NJS_VERSION
+        OPENSSL_CFLAGS: $OPENSSL_CFLAGS
+        OPENSSL_VERSION: $OPENSSL_VERSION
     image: ${IMAGE_NAME}:${NGINX_VERSION}
     # command: ["/usr/bin/nginx", "-t"]
     environment:
