--- a/example.env
+++ b/example.env
@@ -24,16 +24,20 @@ BUILD_THROTTLE=n
 
 # https://hg.nginx.org/nginx/tags
 # https://hub.docker.com/_/nginx
-NGINX_VERSION=1.25.2
-NGINX_COMMIT=1d839f05409d
+NGINX_VERSION=1.25.3
+NGINX_COMMIT=294a3d07234f
 
 # https://hg.nginx.org/njs/tags
-NJS_VERSION=0.8.1
-NJS_COMMIT=a52b49f9afcf
+NJS_VERSION=0.8.2
+NJS_COMMIT=45f81882c780
+
+# https://www.openssl.org/news/changelog.html
+OPENSSL_VERSION=3.0.12
+OPENSSL_CFLAGS="-O2 -pipe"
 
 # https://github.com/openresty/headers-more-nginx-module/tags
-HEADERS_MORE_VERSION=0.34
+HEADERS_MORE_VERSION=0.35
 
 # https://github.com/google/ngx_brotli/commits/master
-NGX_BROTLI_COMMIT=63ca02abdcf79c9e788d2eedcc388d2335902e52
+NGX_BROTLI_COMMIT=a71f9312c2deb28875acc7bacfdd5695a111aa53
 
