update nginx, njs, headers-more, openssl, and more:
- update nginx from 1.25.3 to 1.25.4
- update njs 0.8.2 to 0.8.3
- update headers more module from 0.35 to 0.37
- update base image of build enviroment from Fedora 38 to 39
- update openssl from 3.0.12 to 3.2.1
- change default rsa certificate and dhparam size from 2048 bits to 4096 bits
- add dhparam file to container image
- remove `AES256+EECDH` and `AES256+EDH` from `ssl_ciphers` in default `nginx.conf`
- switch from `docker-compose` script to `docker compose` plugin

--- a/src/etc/nginx/nginx.conf
+++ b/src/etc/nginx/nginx.conf
@@ -139,7 +139,7 @@ http {
   access_log '/var/log/nginx/access.log' $NGINX_LOG_FORMAT_NAME buffer=64K flush=500ms;
   brotli off;
   brotli_static on;
-  client_body_buffer_size 32k;
+  client_body_buffer_size 8k;
   client_body_timeout 10s;
   client_header_buffer_size 8k;
   client_header_timeout 5s;
@@ -178,12 +178,14 @@ http {
   set_real_ip_from 10.0.0.0/8;
   set_real_ip_from 172.16.0.0/12;
   set_real_ip_from 192.168.0.0/16;
-  ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!3DES:!MD5:!PSK';
+  ssl_buffer_size 4k;
+  ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!3DES:!MD5:!PSK';
+  ssl_dhparam 'dhparam.pem';
   ssl_early_data off; # Requests sent within early data are subject to replay attacks. https://datatracker.ietf.org/doc/html/rfc8470
-  ssl_ocsp_cache shared:OCSP:10m; # requires nginx 1.19+
+  ssl_ocsp_cache shared:OCSP:10m;
   ssl_prefer_server_ciphers on;
   ssl_protocols TLSv1.2 TLSv1.3;
-  ssl_session_cache shared:SSL:10m; # about 40000 sessions
+  ssl_session_cache shared:SSL:10m; # about 40_000 sessions
   ssl_session_tickets on;
   ssl_session_timeout 1d;
   ssl_stapling on;
