Some config and entrypoint script changes:
- set `HTTP_PROXY` to empty string to mitigate httpoxy
- disable `ssl_stapling` for default configs, since self-signed certs
  dont have OCSP
- add entrypoint script `150-remove-default-sites.sh` to remove default
  sites if the user supplied one or more site configs via
  `/config/sites/*.conf`

--- a/config/sites/localhost.conf
+++ b/config/sites/localhost.conf
@@ -20,6 +20,8 @@ server {
 
   ssl_certificate 'ssl/cert.pem';
   ssl_certificate_key 'ssl/privkey.pem';
+  ssl_stapling off;
+  ssl_stapling_verify off;
 
   location / {
     allow all;
