--- a/njs/localhost.conf
+++ b/njs/localhost.conf
@@ -18,6 +18,8 @@ server {
 
   ssl_certificate 'ssl/cert.pem';
   ssl_certificate_key 'ssl/privkey.pem';
+  ssl_stapling off;
+  ssl_stapling_verify off;
 
   gzip_vary off;
   expires 0;
