--- a/config/sites/default.conf
+++ b/config/sites/default.conf
@@ -17,6 +17,8 @@ server {
 
   ssl_certificate '${NGINX_HOST_CERT_PATH}/fullchain.pem';
   ssl_certificate_key '${NGINX_HOST_CERT_PATH}/privkey.pem';
+  ssl_stapling off;
+  ssl_stapling_verify off;
 
   location / {
     allow all;
