update nginx, openssl, add `extras` image variant and more
- update nginx from 1.26.0 to 1.27.0
- update openssl from 3.3.0 to 3.3.1
- add `extras` image variant, see project readme for more details about that
- add nginx-rtmp-module
- enable `--with-compat` build flag
- enable `--with-http_v3_module`
- update `CFLAGS` for nginx and openssl
- add patch to disable openssl build tests, which drastically reduces build times
- add RPM package metadata to nginx binary
- add runtime ENV's:
  - NGINX_LOG_ERROR_LEVEL
  - NGINX_LOG_PATH_ACCESS
  - NGINX_LOG_PATH_ERROR
  - USER_NAME
  - GROUP_NAME
- update readme: `Testing` and `Table of Contents` sections
- add example configs for nginx perl module
- move build and helper shell scripts into dedicated `tools` folder
- migrate build script from `docker compose build` to `docker build`
- migrate njs source download from hg.nginx.org to github.com/nginx/njs
- fix some typos

--- a/example.env
+++ b/example.env
@@ -3,11 +3,16 @@
 # Runtime ENV
 DNS_RESOLVER=1.1.1.1
 NGINX_ENVSUBST_TEMPLATE_SUFFIX=.conf
+NGINX_LOG_ERROR_LEVEL=warn
 NGINX_LOG_FORMAT_NAME=main
+NGINX_LOG_PATH_ACCESS=/var/log/nginx/access.log
+NGINX_LOG_PATH_ERROR=/var/log/nginx/error.log
 NGINX_SERVER_HEADER=
 NGINX_WORKER_PROCESSES=auto
 TZ=UTC
+USER_NAME=nginx
 USER_ID=101
+GROUP_NAME=nginx
 GROUP_ID=101
 
 
@@ -23,17 +28,16 @@ BUILD_CACHE=
 BUILD_THROTTLE=n
 
 # https://hg.nginx.org/nginx/tags
-# https://hub.docker.com/_/nginx
-NGINX_VERSION=1.26.0
-NGINX_COMMIT=a58202a8c41b
+NGINX_VERSION=1.27.0
+NGINX_COMMIT=2166e329fb4e
 
-# https://hg.nginx.org/njs/tags
+# https://github.com/nginx/njs/tags
 NJS_VERSION=0.8.4
-NJS_COMMIT=11d956c1577c
+NJS_COMMIT=3fb0ee5e907c9a4153d92946c1ef1b96202f883b
 
 # https://www.openssl.org/news/changelog.html
-OPENSSL_VERSION=3.3.0
-OPENSSL_CFLAGS="-O2 -pipe"
+# https://github.com/openssl/openssl
+OPENSSL_VERSION=3.3.1
 
 # https://github.com/openresty/headers-more-nginx-module/tags
 HEADERS_MORE_VERSION=0.37
@@ -41,3 +45,5 @@ HEADERS_MORE_VERSION=0.37
 # https://github.com/google/ngx_brotli/commits/master
 NGX_BROTLI_COMMIT=a71f9312c2deb28875acc7bacfdd5695a111aa53
 
+# https://github.com/arut/nginx-rtmp-module/tags
+RTMP_VERSION=1.2.2
