--- a/src/etc/nginx/nginx.conf
+++ b/src/etc/nginx/nginx.conf
@@ -3,13 +3,13 @@
 include 'modules/*.conf';
 include 'nginx/*.conf';
 
-error_log '/var/log/nginx/error.log' warn;
+error_log '$NGINX_LOG_PATH_ERROR' $NGINX_LOG_ERROR_LEVEL;
 pcre_jit on;
 pid '/var/run/nginx/nginx.pid';
 worker_cpu_affinity auto;
 worker_priority 10;
 worker_processes $NGINX_WORKER_PROCESSES;
-user nginx nginx;
+user $USER_NAME $GROUP_NAME;
 
 events {
   worker_connections 1024;
@@ -136,7 +136,7 @@ http {
     '"uri": "$uri"' # current URI in request, normalized. The value of $uri may change during request processing, e.g. when doing internal redirects, or when using index files.
   '}';
 
-  access_log '/var/log/nginx/access.log' $NGINX_LOG_FORMAT_NAME buffer=64K flush=500ms;
+  access_log '$NGINX_LOG_PATH_ACCESS' $NGINX_LOG_FORMAT_NAME buffer=64K flush=500ms;
   brotli off;
   brotli_static on;
   client_body_buffer_size 8k;
@@ -158,7 +158,6 @@ http {
   more_clear_headers 'X-Powered-By';
   more_set_headers 'Server: $NGINX_SERVER_HEADER';
   proxy_buffering on;
-  proxy_headers_hash_max_size 2048;
   proxy_http_version 1.1;
   proxy_redirect off;
   proxy_set_header Connection '';
@@ -180,7 +179,6 @@ http {
   set_real_ip_from 192.168.0.0/16;
   ssl_buffer_size 4k;
   ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!3DES:!MD5:!PSK';
-  ssl_dhparam 'dhparam.pem';
   ssl_early_data off; # Requests sent within early data are subject to replay attacks. https://datatracker.ietf.org/doc/html/rfc8470
   ssl_ocsp_cache shared:OCSP:10m;
   ssl_prefer_server_ciphers on;
@@ -193,6 +191,7 @@ http {
   tcp_nodelay off;
 
   include 'njs.conf';
+  include 'perl.conf';
   include 'sites/*.conf';
 }
 
