add HTTP/3 test to readme

--- a/config/sites/localhost.conf
+++ b/config/sites/localhost.conf
@@ -13,10 +13,13 @@ server {
 
 server {
   listen 443 ssl;
+  listen 443 quic reuseport;
   http2 on;
+  http3 on;
   server_name localhost 127.0.0.1 [::1];
   root '/var/www/html';
   index index.html;
+  default_type 'text/html';
 
   ssl_certificate 'ssl/cert.pem';
   ssl_certificate_key 'ssl/privkey.pem';
@@ -25,6 +28,11 @@ server {
 
   location / {
     allow all;
+  }
+
+  location /server_protocol {
+    add_header Alt-Svc 'h3=":443"; ma=86400';
+    return 200 'server_protocol: $server_protocol\n';
   }
 }
 
