add nginx zstd module

--- a/example.env
+++ b/example.env
@@ -47,3 +47,6 @@ NGX_BROTLI_COMMIT=a71f9312c2deb28875acc7bacfdd5695a111aa53
 
 # https://github.com/arut/nginx-rtmp-module/tags
 RTMP_VERSION=1.2.2
+
+# https://github.com/tokers/zstd-nginx-module/tags
+ZSTD_MODULE_VERSION=0.1.1
