--- a/src/etc/nginx/nginx.conf
+++ b/src/etc/nginx/nginx.conf
@@ -29,9 +29,6 @@ http {
   # '"cookie_name": "$cookie_name", ' # the cookie value
   # '"upstream_cookie_name": "$upstream_cookie_name", ' # cookie with the specified name sent by the upstream server in the "Set-Cookie" response header field (1.7.1). Only the cookies from the response of the last server are saved.
 
-  # HTTP/3 isn't in mainline, yet
-  # '"http3": "$http3", ' # negotiated protocol identifier: "h3" for HTTP/3 over TLS or an empty string.
-
   # Disabled because json encoded object becomes invalid
   # '"binary_remote_addr": "$binary_remote_addr", ' # client address in a binary form, value’s length is always 4 bytes for IPv4 addresses or 16 bytes for IPv6 addresses
 
@@ -55,6 +52,7 @@ http {
     '"host": "$host", ' # in this order of precedence: host name from the request line, or host name from the "Host" request header field, or the server name matching a request
     '"hostname": "$hostname", ' # host name
     '"http2": "$http2", ' # negotiated protocol identifier: "h2" for HTTP/2 over TLS, "h2c" for HTTP/2 over cleartext TCP, or an empty string.
+    '"http3": "$http3", ' # negotiated protocol identifier: "h3" for HTTP/3 over TLS or an empty string.
     '"http_host": "$http_host", ' # the request Host: header
     '"http_name": "$http_name", ' # arbitrary request header field; the last part of a variable name is the field name converted to lower case with dashes replaced by underscores
     '"http_referer": "$http_referer", ' # HTTP referer
@@ -134,6 +132,7 @@ http {
     '"upstream_response_time": "$upstream_response_time", ' # keeps time spent on receiving the response from the upstream server; the time is kept in seconds with millisecond resolution. Times of several responses are separated by commas and colons like addresses in the $upstream_addr variable.
     '"upstream_status": "$upstream_status", ' # keeps status code of the response obtained from the upstream server. Status codes of several responses are separated by commas and colons like addresses in the $upstream_addr variable. If a server cannot be selected, the variable keeps the 502 (Bad Gateway) status code.
     '"uri": "$uri"' # current URI in request, normalized. The value of $uri may change during request processing, e.g. when doing internal redirects, or when using index files.
+    '"zstd_ratio": "$zstd_ratio"' # Achieved compression ratio, computed as the ratio between the original and compressed response sizes.
   '}';
 
   access_log '$NGINX_LOG_PATH_ACCESS' $NGINX_LOG_FORMAT_NAME buffer=64K flush=500ms;
@@ -189,6 +188,8 @@ http {
   ssl_stapling on;
   ssl_stapling_verify on;
   tcp_nodelay off;
+  zstd off;
+  zstd_static on;
 
   include 'njs.conf';
   include 'perl.conf';
