Add automated tests and update NJS
- Update NJS from 0.8.4 to 0.8.5
- Automated testing using `hurl`
- Add a couple more tests

--- a/njs/localhost.conf
+++ b/njs/localhost.conf
@@ -13,13 +13,16 @@ server {
 
 server {
   listen 443 ssl;
+  listen 443 quic reuseport;
   http2 on;
+  http3 on;
   server_name localhost 127.0.0.1 [::1];
 
   ssl_certificate 'ssl/cert.pem';
   ssl_certificate_key 'ssl/privkey.pem';
   ssl_stapling off;
   ssl_stapling_verify off;
+  add_header Alt-Svc 'h3=":443"; ma=86400';
 
   gzip_vary off;
   expires 0;
