--- a/example.env
+++ b/example.env
@@ -27,13 +27,16 @@ BUILD_CACHE=
 # This is useful if you dont want to congest the cpu of your building system
 BUILD_THROTTLE=n
 
+# https://github.com/Orange-OpenSource/hurl/releases/latest
+HURL_VERSION=4.3.0
+
 # https://hg.nginx.org/nginx/tags
 NGINX_VERSION=1.27.0
 NGINX_COMMIT=2166e329fb4e
 
 # https://github.com/nginx/njs/tags
-NJS_VERSION=0.8.4
-NJS_COMMIT=3fb0ee5e907c9a4153d92946c1ef1b96202f883b
+NJS_VERSION=0.8.5
+NJS_COMMIT=9d4bf6c60aa60a828609f64d1b5c50f71bb7ef62
 
 # https://www.openssl.org/news/changelog.html
 # https://github.com/openssl/openssl
