Build with support for kTLS and enable by default

--- a/src/etc/nginx/nginx.conf
+++ b/src/etc/nginx/nginx.conf
@@ -178,6 +178,8 @@ http {
   set_real_ip_from 192.168.0.0/16;
   ssl_buffer_size 4k;
   ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!3DES:!MD5:!PSK';
+  ssl_conf_command Options KTLS;
+  ssl_conf_command Options KTLSTxZerocopySendfile;
   ssl_early_data off; # Requests sent within early data are subject to replay attacks. https://datatracker.ietf.org/doc/html/rfc8470
   ssl_ocsp_cache shared:OCSP:10m;
   ssl_prefer_server_ciphers on;
