Dark Mode Support for Nginx Autoindex Module
Signed-off-by: CompileNix <compilenix@gmail.com>

--- a/config/sites/localhost.conf
+++ b/config/sites/localhost.conf
@@ -4,7 +4,7 @@ server {
   listen 80;
   server_name localhost 127.0.0.1 [::1];
   root '/var/www/html';
-  index index.html;
+  index 'index.html';
 
   location / {
     allow all;
@@ -18,7 +18,7 @@ server {
   http3 on;
   server_name localhost 127.0.0.1 [::1];
   root '/var/www/html';
-  index index.html;
+  index 'index.html';
   default_type 'text/html';
 
   ssl_certificate 'ssl/cert.pem';
@@ -30,7 +30,11 @@ server {
     allow all;
   }
 
-  location /server_protocol {
+  location '/autoindex' {
+    autoindex on;
+  }
+
+  location '/server_protocol' {
     add_header Alt-Svc 'h3=":443"; ma=86400';
     return 200 'server_protocol: $server_protocol\n';
   }
