--- a/.env.example
+++ b/.env.example
@@ -21,8 +21,8 @@ GROUP_ID=101
 
 IMAGE_NAME="compilenix/nginx"
 
-BUILD_CACHE=
-# BUILD_CACHE="--no-cache"
+# BUILD_CACHE=
+BUILD_CACHE="--no-cache"
 
 # Reduce build jobs by 4 if there are more then 7 cores else set jobs to half of core count
 # This is useful if you dont want to congest the cpu of your building system
@@ -36,14 +36,14 @@ NGINX_VERSION=1.29.0
 NGINX_COMMIT=235f409907fd60eb2d8f6ecdc0e5cb163dd6d45f
 
 # https://github.com/nginx/njs/tags
-NJS_VERSION=0.9.0
-NJS_COMMIT=fcb99b68f86a72c96e21b81b3b78251174dbd3bf
+NJS_VERSION=0.9.1
+NJS_COMMIT=4fd3ff98e413ede57c88456cf84b116a8382061a
 
 # https://github.com/openssl/openssl/blob/openssl-3.5/CHANGES.md?plain=1
 OPENSSL_VERSION=3.5.1
 
 # https://github.com/openresty/headers-more-nginx-module/tags
-HEADERS_MORE_VERSION=0.38
+HEADERS_MORE_VERSION=0.39
 
 # https://github.com/google/ngx_brotli/commits/master
 NGX_BROTLI_COMMIT=a71f9312c2deb28875acc7bacfdd5695a111aa53
@@ -55,4 +55,4 @@ RTMP_VERSION=1.2.2
 ZSTD_MODULE_VERSION=0.1.1
 
 # https://github.com/bellard/quickjs/commits/master
-QUICK_JS_COMMIT=4d9a27c578d20fc22f0f1a51ff3bfaf47798f30e
+QUICK_JS_COMMIT=1fdc768fdc8571300755cdd3e4654ce99c0255ce
